@@ -17,6 +17,9 @@ popularity-contest (1.31) UNRELEASED; urgency=low
     - Change popcon-submit-ubuntu.cgi to make it easier to run with
       older python versions, and make sure the reply matches the
       "success" string used by popcon-upload.
+    - Change popcon.pl to read section info from the stable branch as
+      well, and make sure it keep working even if one of the sections
+      are empty.
   * Translations
     - Updated Japanese from Kenshi Muto. (Closes: #317402)
     - Updated Russian from Yuri Kozlov. (Closes: #317449)
